--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "jest": "^26.6.3",
+    "jest": "24.9.0",
     "jest-enzyme": "^7.1.2",
     "typescript": "3.8.3"
   },
